Documentation updated with JSON and SJX

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,30 +1,15 @@
 ---
-title: "Landing Page"
+title: "swmm-JS"
 ---
 
-Some introduction text. Lists out all the headings from h1 to h6. Easy to customise. Some more text. Additional text.
+swmm-js is a free, open-source solution for EPA-SWMM (Environmental Protection Agency Stormwater Managment Model) file communication, management, and sharing.
 
-# Heading H1
-Heading 1 text
+# What can I do with swmm-js?
+swmm-js is in early alpha. This means that the program will experience many changes day-by-day. Stability, consistency, and feature use patterns are likely to be temporary. If you are interested in checking out what swmm-js can do, have a look at the following links:
 
-## Heading H2
-Heading 2 text
-
-### Heading H3
-Heading 3 text
-
-#### Heading H4
-Heading 4 text
-
-##### Heading H5
-Heading 5 text
-
-###### Heading H6
-Heading 6 text
-
-## Lists
-- Item 1
-- Item 2
-- Item 3
-- Item 4
-- Item 5
+## Projects:
+- [Create a free swmm-js website.](https://www.swmm-js.org/index_howto.html)
+- [Examine the GitHub repository.](https://github.com/ikegdivs/swmm-js)
+- [Create a no-code web portfolio.](https://www.swmm-js.org/index_howto_hackcover.html)
+- [Create a basic model.](https://www.swmm-js.org/index_howto_makemodel.html)
+- [Running a model.](https://www.swmm-js.org/index_howto_runmodel.html)
